--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vscode-hex-multi-converter",
   "displayName": "hex-multi-converter",
   "publisher": "jesper",
+  "icon": "icon.png",
   "description": "Convert hex to ASCII, decimal and binary with multi-select support",
   "version": "0.0.1",
   "engines": {
