--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       },
       {
         "command": "hex-multi-converter.commentHexAsDecimal",
-        "title": "Comment Hex as Decimal"
+        "title": "Comment Hex As Decimal"
       },
       {
         "command": "hex-multi-converter.hexToASCII",
